<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- actions -->
    <string name="sq_actions_about">About</string>
    <string name="sq_actions_settings">Settings</string>
    <string name="sq_actions_open_drawer">Open navigation drawer</string>
    <string name="sq_actions_close_drawer">Close navigation drawer</string>
    <string name="sq_actions_deactivate">Deactivate</string>
    <string name="sq_actions_create">Create</string>
    <string name="sq_actions_delete">Delete</string>
    <string name="sq_actions_allow">Allow</string>
    <string name="sq_actions_duplicate">Duplicate</string>
    <string name="sq_actions_share">Share</string>
    <string name="sq_actions_update">Update</string>
    <string name="sq_actions_connect">Connect</string>
    <!-- commons -->
    <string name="sq_commons_my_events">My events</string>
    <string name="sq_commons_my_currencies">My active currencies</string>
    <string name="sq_commons_activate_currency">Activate a currency</string>
    <string name="sq_commons_one_day">1 day</string>
    <string name="sq_commons_two_days">2 days</string>
    <string name="sq_commons_three_days">3 days</string>
    <string name="sq_commons_one_week">1 week</string>
    <string name="sq_commons_the">the %1$s</string>
    <string name="sq_commons_from">from %1$s</string>
    <string name="sq_commons_to">to %1$s</string>
    <string name="sq_commons_name">Name</string>
    <string name="sq_commons_email">Email</string>
    <string name="sq_commons_weight">Weight</string>
    <string name="sq_commons_at">at</string>
    <string name="sq_commons_food">Food</string>
    <string name="sq_commons_accommodation">Accommodation</string>
    <string name="sq_commons_restaurant">Restaurant</string>
    <string name="sq_commons_parking">Parking</string>
    <string name="sq_commons_taxi">Taxi</string>
    <string name="sq_commons_party">Party</string>
    <string name="sq_commons_leisure">Leisure</string>
    <string name="sq_commons_transport">Transport</string>
    <string name="sq_commons_gas">Gas</string>
    <string name="sq_commons_toll">Toll</string>
    <string name="sq_commons_uncategorized">Uncategorized</string>
    <!-- settings screen -->
    <string name="sq_screen_settings_category_currencies_title">Currencies</string>
    <string name="sq_screen_settings_category_currencies_label_update_frequency">Update frequency</string>
    <string name="sq_screen_settings_category_currencies_dialog_select_frequency">Select a frequency</string>
    <string name="sq_screen_settings_category_currencies_label_last_update">Last update</string>
    <string name="sq_screen_settings_category_debts_title">Debts</string>
    <string name="sq_screen_settings_category_debts_label_minimize">Minimize</string>
    <!-- home screen -->
    <string name="sq_screen_home_textview_empty_label">You have created no event yet</string>
    <!-- currencies list screen -->
    <string name="sq_screen_currencies_list_textview_empty_label">You have activated no currency yet</string>
    <!-- deal screen -->
    <string name="sq_edit_deal_screen_payment_label">makes a payment for</string>
    <!-- dialogs -->
    <string name="sq_dialog_title_warning">Warning</string>
    <string name="sq_dialog_title_create_contact">New contact</string>
    <string name="sq_dialog_message_delete_event">Êtes-vous certain(e) de vouloir supprimer cet évènement ?</string>
    <!-- hints -->
    <string name="sq_hint_add_participants">Add participants</string>
    <string name="sq_hint_select_currency">Select a currency</string>
    <string name="sq_hint_select_start_date">Select a start date</string>
    <string name="sq_hint_select_end_date">Select an end date</string>
    <!-- dialogs -->
    <string name="sq_validation_required_field">Ce champ est obligatoire</string>
    <!-- messages -->
    <string name="sq_message_success_activate_currency">"You have activated the currency: %1$s"</string>
    <string name="sq_message_success_deactivate_currencies_selection">"You have deactivated: %1$s"</string>
    <string name="sq_message_success_create_event">"You have created the event: %1$s"</string>
    <string name="sq_message_success_update_event">"You have updated the event: %1$s"</string>
    <string name="sq_message_success_delete_event">"You have deleted the event: %1$s"</string>
    <string name="sq_message_success_remove_events_selection">"You have removed: %1$s"</string>
    <string name="sq_message_error_activate_currency">"The currency %1$s has not been activated"</string>
    <string name="sq_message_error_deactivate_currencies_selection">"One or many currencies of your selection could
        not be deactivated"</string>
    <string name="sq_message_error_create_event">"This event could not be created"</string>
    <string name="sq_message_error_update_event">"This event could not be updated"</string>
    <string name="sq_message_error_delete_event">"This event could not be deleted"</string>
    <string name="sq_message_error_remove_events_selection">"One or many events of your selection could
        not be removed"</string>
    <string name="sq_message_warning_request_contacts_permission">L\'application ne peut vous proposer des
        correspondances si vous ne lui permettez pas d\'accéder à vos contacts</string>
    <string name="sq_message_warning_open_event_with_contacts_without_contacts_permissions">L\'application ne peut
        ouvrir un évènement avec des contacts si vous ne lui permettez pas d\'accéder à vos contacts</string>
    <string name="sq_message_warning_not_yet_implemented">Available shortly</string>
    <string name="sq_message_info_add_participants">Sélectionnez un contact dans la liste ci-dessous ou appuyer sur , ou entrée à la fin de votre saisie pour en créer un nouveau</string>
    <string name="sq_message_warning_sign_in_with_multiple_google_accounts">"You have already used another Google
        account to sign in, please use it again"</string>
    <string name="sq_message_error_at_least_one_active_participant">"At least one active participant is
        required for a deal"</string>
    <string name="sq_message_error_create_deal">"This deal could not be created"</string>
</resources>
