<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Square up android app
  ~ Copyright (C) 2016 Sebastien BALARD
  ~
  ~ This program is free software; you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation; either version 2 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along
  ~ with this program; if not, write to the Free Software Foundation, Inc.,
  ~ 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/sq_menu_contextual_event_item_duplicate"
        android:orderInCategory="100"
        android:title="@string/sq_actions_duplicate"
        app:showAsAction="never|withText"/>
    <item
        android:id="@+id/sq_menu_contextual_event_item_share"
        android:orderInCategory="101"
        android:title="@string/sq_actions_share"
        app:showAsAction="never|withText"/>
    <item
        android:id="@+id/sq_menu_contextual_event_item_delete"
        android:orderInCategory="102"
        android:title="@string/sq_actions_delete"
        app:showAsAction="never|withText"/>
</menu>