<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Square up android app
  ~ Copyright (C) 2016 Sebastien BALARD
  ~
  ~ This program is free software; you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation; either version 2 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along
  ~ with this program; if not, write to the Free Software Foundation, Inc.,
  ~ 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/sq_dialog_create_contact_layout"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingBottom="@dimen/sq_margin_activity_vertical"
              android:paddingEnd="24dp"
              android:paddingStart="24dp"
              android:focusable="true"
              android:focusableInTouchMode="true"
              android:paddingTop="@dimen/sq_margin_activity_vertical"
              android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/sq_dialog_create_contact_edittext_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/sq_commons_name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/sq_dialog_create_contact_edittext_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/sq_commons_weight"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLines="1"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/sq_dialog_create_contact_edittext_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sq_commons_email"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:maxLines="1"/>
    </android.support.design.widget.TextInputLayout>
</LinearLayout>